Added sign up stub

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
-<%= image_tag @post.image %>
-<%= @post.title %>
-<%= @post.user.username %>
-<%= @post.create_date %>
+<%= image_tag @post.image, width:"400" %>
+<p><%= @post.title %></p>
+<p><%= @post.user.username %></p>
+<p><%= @post.create_date %></p>
 
 comments below
