--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,10 @@
-<% @posts.each do |post| %>
-<%= link_to(image_tag(post.image, width:"200"), post) %>
-<% end %>
+<h1> All Dogs </h1>
+
+<div class="card-columns">
+  <% @posts.each do |post| %>
+  <div class="card">
+  <%= link_to(image_tag(post.image, class:"card-img", width:"100%"), post) %>
+  </div>
+  <% end %>
+
+</div>
