--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,18 @@
-<%= form_for @user do |f| %>
+<div class="col-md-6 col-md-offset-3">
+<%= form_for @user, url: signup_path do |f| %>
+
 <%= f.label :username %>
 <%= f.text_field :username %>
+
 <%= f.label :email %>
 <%= f.text_field :email %>
+
 <%= f.label :password %>
 <%= f.password_field :password %>
+
 <%= f.label :password_confirmation %>
 <%= f.password_field :password_confirmation %>
 
 <%= f.submit %>
 <% end %>
+</div>
