--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,18 +1,20 @@
-<div class="col-md-6 col-md-offset-3">
-<%= form_for @user do |f| %>
+<div class="container">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for @user do |f| %>
 
-<%= f.label :email %>
-<%= f.text_field :email %>
+    <%= f.label :email %>
+    <%= f.text_field :email %>
 
-<%= f.label :image %>
-<%= f.text_field :image %>
+    <%= f.label :image %>
+    <%= f.text_field :image %>
 
-<%= f.label :location %>
-<%= f.text_field :location %>
+    <%= f.label :location %>
+    <%= f.text_field :location %>
 
-<%= f.label :bio %>
-<%= f.text_field :bio %>
+    <%= f.label :bio %>
+    <%= f.text_field :bio %>
 
-<%= f.submit %>
-<% end %>
+    <%= f.submit %>
+    <% end %>
+  </div>
 </div>
