--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -26,4 +26,39 @@
 </div>
 <hr>
 
-comments below
+<div class="row justify-content-sm-center">
+  <% @post.comments.each do |comment| %>
+  <div class="col-sm-8">
+      <div class="card">
+        <div class="card-body">
+          <h4 class="card-title"><%= link_to comment.user.username, comment.user %></h4>
+          <p class="card-text"><%= comment.content %></p>
+        </div>
+        <div class= "card-footer text-right">
+          <% if comment.user == current_user %>
+
+          <%= link_to 'Edit', edit_post_comment_path(@post, comment, anchor:"comment_form"), class: "card-link" %>
+          <%= link_to 'Delete', post_comment_path(@post, comment), method:"delete", class:"card-link" %>
+          <% else %>
+            &nbsp
+          <% end %>
+        </div>
+    </div>
+  </div>
+  <% end %>
+<!-- </div>
+<div class="row justify-content-sm-center"> -->
+  <div class="col-sm-8" id="comment_form" style="padding-top:20px;">
+    <%= form_for [@post, @comment]  do |f| %>
+      <div class="form-group">
+      <%= f.label :content, "Leave a comment:" %>
+      <%= f.text_area :content, class:"form-control" %>
+      </div>
+      <div class="text-right">
+        <div class="col">
+      <%= f.submit class:"btn btn-light"%>
+      </div>
+    </div>
+    <% end %>
+  </div>
+</div>
