--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,13 +10,16 @@
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <% if logged_in? %>
+      <li class="nav-item active">
+        <%= link_to 'New Post', new_post_path, class:"nav-link" %>
+      </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Account
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <%= link_to "Profile", current_user, class:"dropdown-item" %>
-          <%= link_to "Settings", '#', class:"dropdown-item"%>
+          <%= link_to "Edit Profile", edit_user_path(current_user), class:"dropdown-item"%>
           <div class="dropdown-divider"></div>
           <%= link_to "Log out", logout_path, method: :delete,class:"dropdown-item" %>
         </div>
