--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<div class"containe">
+<div class"container">
   <div class="row justify-content-center">
     <div class="col-sm-10">
     <%= form_tag root_path, method:"get", class:"form-inline" do%>
