--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -6,3 +6,11 @@
  body {
    padding-top: 70px;
  }
+
+ .thumb-post img {
+   object-fit: contain; /* Do not scale the image */
+   object-position: center; /* Center the image within the element */
+   width: 100%;
+   max-height: 15em;
+   margin-bottom: 1rem;
+ }
