--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,15 +1,22 @@
-<h1> New Post </h1>
+<h1 class="text-center"> New Post </h1>
 
-<div class="container">
-  <div class="col-md-6 col-md-offset-3">
-  <%= form_for @post do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
+  <div class="container">
+    <div class="row justify-content-center">
+    <div class="col-sm-6">
+    <%= form_for @post do |f| %>
+    <div class="form-group">
+      <%= f.label :title %>
+      <%= f.text_field :title, class:"form-control" %>
+    </div>
 
-  <%= f.label :image %>
-  <%= f.text_field :image %>
-  <%= f.submit "Submit Post" %>
+    <div class="form-group">
+      <%= f.label :image %>
+      <%= f.text_field :image, class:"form-control" %>
+    </div>
 
-  <% end %>
+    <%= f.submit "Submit Post", class:"btn btn-secondary" %>
+
+    <% end %>
+    </div>
   </div>
 </div>
