--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,20 +1,32 @@
+<h1 class="text-center"> Edit Profile </h1>
+
 <div class="container">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="row justify-content-center">
+  <div class="col-sm-6">
     <%= form_for @user do |f| %>
 
+      <div class="form-group">
     <%= f.label :email %>
-    <%= f.text_field :email %>
+    <%= f.text_field :email, class:"form-control" %>
+    </div>
 
+    <div class="form-group">
     <%= f.label :image %>
-    <%= f.text_field :image %>
+    <%= f.text_field :image, class:"form-control" %>
+    </div>
 
+    <div class="form-group">
     <%= f.label :location %>
-    <%= f.text_field :location %>
+    <%= f.text_field :location, class:"form-control" %>
+    </div>
 
+    <div class="form-group">
     <%= f.label :bio %>
-    <%= f.text_field :bio %>
+    <%= f.text_field :bio, class:"form-control" %>
+    </div>
 
-    <%= f.submit %>
+    <%= f.submit 'Submit Changes', class:"btn btn-secondary" %>
     <% end %>
+  </div>
   </div>
 </div>
