--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,18 +1,32 @@
-<div class="col-md-6 col-md-offset-3">
-<%= form_for @user, url: signup_path do |f| %>
+<h1 class="text-center"> Create New Account </h1>
 
-<%= f.label :username %>
-<%= f.text_field :username %>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-sm-6">
+      <%= form_for @user, url: signup_path do |f| %>
 
-<%= f.label :email %>
-<%= f.text_field :email %>
+    <div class="form-group">
+      <%= f.label :username %>
+      <%= f.text_field :username, class:"form-control" %>
+    </div>
 
-<%= f.label :password %>
-<%= f.password_field :password %>
+    <div class="form-group">
+      <%= f.label :email %>
+      <%= f.text_field :email, class:"form-control" %>
+    </div>
 
-<%= f.label :password_confirmation %>
-<%= f.password_field :password_confirmation %>
+    <div class="form-group">
+      <%= f.label :password %>
+      <%= f.password_field :password, class:"form-control" %>
+    </div>
 
-<%= f.submit %>
-<% end %>
+    <div class="form-group">
+      <%= f.label :password_confirmation %>
+      <%= f.password_field :password_confirmation, class:"form-control" %>
+    </div>
+
+      <%= f.submit 'Sign Up', class:"btn btn-secondary"%>
+      <% end %>
+    </div>
+  </div>
 </div>
