--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,17 @@
   <body>
     <%= render 'layouts/header' %>
 
+      <% flash.each do |message_type, message| %>
+        <div class="container">
+          <div class="alert alert-<%= message_type %> alert-dismissible fade show"><%= message %>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+        </div>
+      <% end %>
       <%= yield %>
 
+    <%= render 'layouts/footer' %>
   </body>
 </html>
