--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,6 +3,18 @@
   <div class="container">
     <div class="row justify-content-center">
     <div class="col-sm-6">
+      <% if @post.errors.any? %>
+        <div id="error_explanation">
+          <div class="alert alert-danger">
+            The form contains <%= pluralize(@post.errors.count, "error") %>.
+          </div>
+          <ul>
+          <% @post.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+          <% end %>
+          </ul>
+        </div>
+      <% end %>
     <%= form_for @post do |f| %>
     <div class="form-group">
       <%= f.label :title %>
