--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -21,10 +21,17 @@
       <%= f.text_field :title, class:"form-control" %>
     </div>
 
-    <div class="form-group">
+    <!-- <div class="form-group">
       <%= f.label :image %>
-      <%= f.text_field :image, class:"form-control" %>
+      <%= f.file_field :image, class:"form-control-file" %>
+    </div> -->
+        <div class="input-group mb-3">
+    <div class="custom-file">
+      <%= f.file_field :image, class:"custom-file-input"%>
+      <label class="custom-file-label" for="validatedCustomFile">Choose file...</label>
     </div>
+        </div>
+
 
     <%= f.submit "Submit Post", class:"btn btn-secondary" %>
 
