--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -22,9 +22,11 @@
     <%= f.text_field :email, class:"form-control" %>
     </div>
 
-    <div class="form-group">
-    <%= f.label :image %>
-    <%= f.text_field :image, class:"form-control" %>
+    <div class="input-group mb-3">
+    <div class="custom-file">
+      <%= f.file_field :image, class:"custom-file-input"%>
+      <label class="custom-file-label" for="validatedCustomFile">Choose file...</label>
+    </div>
     </div>
 
     <div class="form-group">
