--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,8 +2,8 @@
   <div class="row">
   <div class="col-sm-6">
       <div class="card">
-        <% if @user.image %>
-        <%= image_tag @user.image, width:"100%", class:"card-img-top" %>
+        <% if @user.image.url %>
+        <%= image_tag @user.image.url, width:"100%", class:"card-img-top" %>
         <% else %>
         <%= image_tag "https://via.placeholder.com/400x300", width:"100%", class:"card-img-top" %>
         <% end %>
