--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
 <div class="container-fluid footer-classic">
   <hr>
-  <p class="text-muted text-center align-items-center">	© updog | MADE WITH ♥</p>
+  <p class="text-muted text-center align-items-center">	© updog | MADE WITH ♥ BY KAT MICHAELA & ALEX SALIM</p>
 </div>
