--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,10 +1,24 @@
 @import "bootstrap";
+@import url('https://fonts.googleapis.com/css?family=Comfortaa:700');
 .ml-auto .dropdown-menu {
    left: auto !important;
    right: 0px;
  }
  body {
-   padding-top: 70px;
+   padding-top: 75px;
+ }
+
+ .navbar {
+   -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.50);
+   -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.50);
+   box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.50);
+ }
+
+ .navbar-brand {
+   font-weight: bold;
+   font-size: 1.5rem;
+   margin-left: 20px;
+   font-family: "Comfortaa", "Helvetica", "Arial", sans-serif;
  }
 
  .thumb-post img {
