--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -25,11 +25,14 @@
       <%= f.label :image %>
       <%= f.file_field :image, class:"form-control-file" %>
     </div> -->
+    <div class="form-group">
+        <%= f.label :image %>
         <div class="input-group mb-3">
     <div class="custom-file">
       <%= f.file_field :image, class:"custom-file-input"%>
       <label class="custom-file-label" for="validatedCustomFile">Choose file...</label>
     </div>
+  </div>
         </div>
 
 
