--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -21,13 +21,15 @@
     <%= f.label :email %>
     <%= f.text_field :email, class:"form-control" %>
     </div>
-
+    <div class="form-group">
+      <%= f.label :image %>
     <div class="input-group mb-3">
     <div class="custom-file">
       <%= f.file_field :image, class:"custom-file-input"%>
       <label class="custom-file-label" for="validatedCustomFile">Choose file...</label>
     </div>
     </div>
+  </div>
 
     <div class="form-group">
     <%= f.label :location %>
